tests/Fase2-Semantic/error/t25-assign_over_no_compatible_types.ctds
class aux {

}

class main {
    integer x;
    

    integer add( integer b){
        bool a;
        a = x;
        return x;
    }

    void main(){
        x=0;
        add(2);
    }
    
}
